--- a/src/CardPelicula.module.css
+++ b/src/CardPelicula.module.css
@@ -1,14 +1,17 @@
 .movieCard {
     list-style: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: center;
     color: white;
 }
 
 .movieImage {
-    border-radius: 10px;
     background-color: azure;
-    border: 1px solid white;
+    border-radius: 15px;
+}
+.movieImage:hover {
+    opacity: 0.6;
+    width: 160px;
 }
 
 @media (max-width: 540px) {
